@@ -1,3 +1,7 @@
+2012-03-13  6.7.6-1 Cristy  <quetzlzacatenango@image...>
+  * Use uint32 pointer for ReadStripMethod in coders/tiff.c (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=20526).
+
 2012-03-10  6.7.6-0 Cristy  <quetzlzacatenango@image...>
   * New version 6.7.6-0, SVN revision 7090.
 
